_variables.scss: changed

--- a/src/sass/imports/_variables.scss
+++ b/src/sass/imports/_variables.scss
@@ -52,7 +52,7 @@ $theme-palettes: (
     secondary: #57cb85
   ),
   orange: (
-    primary:   #fe8c00,
+    primary:   #dfe1ee,
     secondary: #f83600
   ),
   purple: (
