--- a/src/sass/imports/_variables.scss
+++ b/src/sass/imports/_variables.scss
@@ -53,7 +53,7 @@ $theme-palettes: (
   ),
   orange: (
     primary:   #dfe1ee,
-    secondary: #f83600
+    secondary: #f2f6ff
   ),
   purple: (
     primary:   #653cad,
