_variables.scss: changed

--- a/src/sass/imports/_variables.scss
+++ b/src/sass/imports/_variables.scss
@@ -52,7 +52,7 @@ $theme-palettes: (
     secondary: #57cb85
   ),
   orange: (
-    primary:   #f4f4fa,
+    primary:   #3930a2,
     secondary: #f2f6ff
   ),
   purple: (
