_variables.scss: changed

--- a/src/sass/imports/_variables.scss
+++ b/src/sass/imports/_variables.scss
@@ -48,7 +48,7 @@ $theme-palettes: (
     secondary: #54d1db
   ),
   green: (
-    primary:   #37b05d,
+    primary:   #1F4E5F,
     secondary: #57cb85
   ),
   orange: (
