_variables.scss: changed

--- a/src/sass/imports/_variables.scss
+++ b/src/sass/imports/_variables.scss
@@ -49,7 +49,7 @@ $theme-palettes: (
   ),
   green: (
     primary:   #1F4E5F,
-    secondary: #57cb85
+    secondary: #1F4E5F
   ),
   orange: (
     primary:   #3930a2,
