_variables.scss: changed

--- a/src/sass/imports/_variables.scss
+++ b/src/sass/imports/_variables.scss
@@ -53,7 +53,7 @@ $theme-palettes: (
   ),
   orange: (
     primary:   #3930a2,
-    secondary: #f2f6ff
+    secondary: #3930a2
   ),
   purple: (
     primary:   #653cad,
